# MoneyCalculatorBot

./: pyproject.toml
