[tool.poetry]
name = "moneycounter"
version = "0.1.0"
description = ""
authors = ["barkaloff <ilyabarkalov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
